Add Integrated Strategies configuration to fastmode.cfg
for our server we will add rogue fights into a waveset form
they have been proven to be significantly difficult in waveset form therefore it'd be funny

rogue 1 is first obv

--- a/addons/sourcemod/configs/zombie_riot/fastmode.cfg
+++ b/addons/sourcemod/configs/zombie_riot/fastmode.cfg
@@ -80,6 +80,12 @@
 			"desc"		"Khaml Desc"
 			"level"		"100"
 		}
+		"Integrated Strategies"
+		{
+			"file"		"fast_whiteflower"
+			"desc"		"White Desc"
+			"level"		"120"
+		}
 	}
 	"Modifiers"
 	{
