nerf w30 of int. strats
shit was atrocious

--- a/addons/sourcemod/configs/zombie_riot/fast_whiteflower.cfg
+++ b/addons/sourcemod/configs/zombie_riot/fast_whiteflower.cfg
@@ -1252,7 +1252,7 @@
 		"3.1"
 		{
 			"count"					"0"
-			"health"				"31000000"
+			"health"				"15000000"
 			"is_boss"				"1"
 			"is_immune_to_nuke"		"1"
 			"is_health_scaling"		"1"
@@ -1263,7 +1263,7 @@
 		"1.0"	// 0:05
 		{
 			"count"		"1"
-			"health"	"100000"
+			"health"	"80000"
 			"is_boss"	"1"
 			"extra_damage"	"3.0"
 			"extra_speed"	"1.5"
@@ -1274,7 +1274,7 @@
 		"8.5"	// 0:06
 		{
 			"count"		"1"
-			"health"	"250000"
+			"health"	"150000"
 			"is_boss"	"1"
 			"extra_damage"	"2.0"
 			"extra_speed"	"1.1"
@@ -1285,7 +1285,7 @@
 		"8.5"	// 0:08
 		{
 			"count"		"1"
-			"health"	"250000"
+			"health"	"150000"
 			"is_boss"	"1"
 			"extra_damage"	"2.0"
 			"extra_speed"	"1.1"
@@ -1307,7 +1307,7 @@
 		"8.5"	// 0:16
 		{
 			"count"		"2"
-			"health"	"250000"
+			"health"	"150000"
 			"is_boss"	"1"
 			"extra_damage"	"2.0"
 			"extra_speed"	"1.1"
@@ -1318,7 +1318,7 @@
 		"8.5"	// 0:22
 		{
 			"count"		"1"
-			"health"	"250000"
+			"health"	"150000"
 			"is_boss"	"1"
 			"extra_damage"	"2.0"
 			"extra_speed"	"1.1"
@@ -1329,7 +1329,7 @@
 		"8.5"	// 0:29
 		{
 			"count"		"1"
-			"health"	"150000"
+			"health"	"120000"
 			"is_boss"	"1"
 			"extra_damage"	"2.0"
 			"extra_speed"	"1.1"
@@ -1340,7 +1340,7 @@
 		"8.5"	// 0:38
 		{
 			"count"		"1"
-			"health"	"300000"
+			"health"	"200000"
 			"is_boss"	"1"
 			"extra_damage"	"2.0"
 			"extra_speed"	"1.1"
@@ -1351,7 +1351,7 @@
 		"8.5"	// 0:48
 		{
 			"count"		"1"
-			"health"	"350000"
+			"health"	"185000"
 			"is_boss"	"1"
 			"extra_damage"	"2.0"
 			"extra_speed"	"1.1"
@@ -1363,7 +1363,7 @@
 		{
 			"count"		"1"
 			"is_boss"	"1"	
-			"health"	"400000"
+			"health"	"200000"
 			"extra_damage"	"2.0"
 			"extra_speed"	"1.1"
 			"extra_ranged_res"	"0.3"
@@ -1374,7 +1374,7 @@
 		{
 			"is_boss"	"1"
 			"count"		"1"
-			"health"	"250000"
+			"health"	"150000"
 			"extra_damage"	"2.0"
 			"extra_speed"	"1.1"
 			"extra_ranged_res"	"0.3"
@@ -1432,7 +1432,7 @@
 			"plugin"	"npc_pathshaper"
 			"health"	"500000"
 			"extra_damage"	"2.0"
-			"extra_speed"	"2.0"
+			// why was his speed so fucking fast.
 			"extra_ranged_res"	"0.3"
 			"extra_melee_res"	"0.3"
 			"is_boss"	"1"
@@ -1440,7 +1440,7 @@
 		"12.5"	// 3:26
 		{
 			"count"		"1"
-			"health"	"750000"
+			"health"	"350000"
 			"is_boss"	"1"
 			"plugin"	"npc_spy_boss"
 			"extra_damage"	"2.0"
@@ -1473,7 +1473,7 @@
 		"12.5"	// 4:18
 		{
 			"count"		"1"
-			"health"	"750000"
+			"health"	"350000"
 			"extra_damage"	"2.0"
 			"extra_speed"	"1.1"
 			"extra_ranged_res"	"0.3"
@@ -1484,7 +1484,7 @@
 		"12.5"	// 4:48
 		{
 			"count"		"1"
-			"health"	"750000"
+			"health"	"350000"
 			"extra_damage"	"2.0"
 			"extra_speed"	"1.1"
 			"extra_ranged_res"	"0.3"
