--- a/addons/sourcemod/configs/zombie_riot/fast_whiteflower.cfg
+++ b/addons/sourcemod/configs/zombie_riot/fast_whiteflower.cfg
@@ -1211,17 +1211,16 @@
 	{
 		"cash"	"9000"
 		
-		"0.000"
+		"1.0"
 		{
-			"count"		"100"
-			"health"	"125000"
-			"plugin"	"npc_xeno_headcrabzombie_fortified"
-		}
-		"0.00"
-		{
-			"count"		"90"
-			"health"	"75000"
-			"plugin"	"npc_xeno_headcrabzombie_fortified"
+			"count"		"1"
+			"health"	"80000"
+			"is_boss"	"1"
+			"extra_damage"	"3.0"
+			"extra_speed"	"1.5"
+			"extra_ranged_res"	"0.3"
+			"extra_melee_res"	"0.3"
+			"plugin"	"npc_last_survivor"
 		}
 		"0.0"
 		{
