add new waveset YAY

--- a/addons/sourcemod/configs/zombie_riot/fastmode.cfg
+++ b/addons/sourcemod/configs/zombie_riot/fastmode.cfg
@@ -46,32 +46,32 @@
 		"Nemal"
 		{
 			"file"		"fast_nemal_iberia"
-			"desc"		"Iberia Nemal Desc"
+			"desc"		"Lore order: (11) Iberia and expidonsa offer training to help against the true final battle against the void... Although iberians seem to take it extremly seriously."
 			"level"		"75"
 		}
 		"Victoria"
 		{
 			"file"		"fast_victoria"
-			"desc"		"Victoria Raid Desc"
+			"desc"		"Lore order: (13) You are asked by Sensal to visit Ziberia where it is currently under attack by Victoria."
 			"level"		"75"
 		}
 		"Laboratories"
 		{
 			"file"		"fast_laboratories"
-			"desc"		"Laboratories Raid Desc"
+			"desc"		"Lore order: (12) After construction and zilius's attack, Izan sends you to an old facility, it seems to have an exact replica of some places.."
 			"level"		"75"
 		}
 		
 		"Twirl"
 		{
 			"file"		"fast_twirl"
-			"desc"		"Twirl Raid Desc"
+			"desc"		"Lore order: (8) A certain individual has taken an interest in your group"
 			"level"		"80"
 		}
 		"Unspeakable"
 		{
 			"file"		"fast_void"
-			"desc"		"Unspeakable Raid Desc"
+			"desc"		"Lore order: (10) Hours after defeating Vhxis..."
 			"level"		"90"
 		}
 		"Interitus Group"
@@ -83,8 +83,14 @@
 		"Integrated Strategies"
 		{
 			"file"		"fast_whiteflower"
-			"desc"		"White Desc"
+			"desc"		"Lore order: (0) You haven't heard from Guln or Lucella in a while. Ivan told you to go check out Iberia, when you arrive something feels wrong."
 			"level"		"120"
+		}
+		"Chaos Influence"
+		{
+			"file"		"fast_deepforest"
+			"desc"		"Lore order: (9) After Twirl tested you, Expidonsa went quiet. Waldch is in trouble, and you stumble upon new enemies later in your battles with familiar faces."
+			"level"		"150"
 		}
 	}
 	"Modifiers"
